--- a/Debut/Debut.vcxproj
+++ b/Debut/Debut.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="src\Debut\Renderer\Texture.h" />
     <ClInclude Include="src\Debut\Renderer\VertexArray.h" />
     <ClInclude Include="src\Debut\dbtpch.h" />
+    <ClInclude Include="src\Debut\Scene\ScriptableEntity.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLError.h" />
