--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -4,24 +4,40 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
-Size=313,701
+Pos=1769,19
+Size=151,972
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,720
+Size=1920,991
 Collapsed=0
 
 [Window][Scene view]
-Pos=315,19
-Size=965,701
+Pos=381,19
+Size=1386,972
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Scene Hierarchy]
+Pos=0,507
+Size=379,484
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Properties]
+Pos=0,19
+Size=379,486
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=73,121 Size=1280,701 Split=X
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=313,701 Selected=0x1C33C293
-  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=965,701 CentralNode=1 Selected=0xD184B444
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,48 Size=1920,972 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1767,701 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=379,701 Split=Y Selected=0xC89E3217
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=371,486 Selected=0xC89E3217
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=371,484 Selected=0x9A68760C
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1386,701 CentralNode=1 Selected=0xD184B444
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=151,701 Selected=0x1C33C293
 
