--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Debut/vendor/spdlog"]
 	path = Debut/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Debut/vendor/yaml-cpp"]
+	path = Debut/vendor/yaml-cpp
+	url = https://github.com/jbeder/yaml-cpp
