--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="src\Debut\Renderer">
       <UniqueIdentifier>{16C5B573-02A9-76C9-6B09-711C570C614B}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Debut\Scene">
+      <UniqueIdentifier>{8DE4E4EE-F96F-52B3-0281-D5A76E8BAEB3}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
@@ -96,6 +99,9 @@
     <ClInclude Include="src\Debut\Renderer\Buffer.h">
       <Filter>src\Debut\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Debut\Renderer\Camera.h">
+      <Filter>src\Debut\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Debut\Renderer\FrameBuffer.h">
       <Filter>src\Debut\Renderer</Filter>
     </ClInclude>
@@ -128,6 +134,21 @@
     </ClInclude>
     <ClInclude Include="src\Debut\Renderer\VertexArray.h">
       <Filter>src\Debut\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Scene\Components.h">
+      <Filter>src\Debut\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Scene\Entity.h">
+      <Filter>src\Debut\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Scene\Scene.h">
+      <Filter>src\Debut\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Scene\SceneCamera.h">
+      <Filter>src\Debut\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Scene\ScriptableEntity.h">
+      <Filter>src\Debut\Scene</Filter>
     </ClInclude>
     <ClInclude Include="src\Debut\dbtpch.h">
       <Filter>src\Debut</Filter>
@@ -162,12 +183,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Scene\Scene.h" />
-    <ClInclude Include="src\Debut\Scene\Components.h" />
-    <ClInclude Include="src\Debut\Scene\Entity.h" />
-    <ClInclude Include="src\Debut\Renderer\Camera.h" />
-    <ClInclude Include="src\Debut\Scene\SceneCamera.h" />
-    <ClInclude Include="src\Debut\Scene\ScriptableEntity.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Debut\Core\Application.cpp">
@@ -224,6 +239,15 @@
     <ClCompile Include="src\Debut\Renderer\VertexArray.cpp">
       <Filter>src\Debut\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\Debut\Scene\Entity.cpp">
+      <Filter>src\Debut\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debut\Scene\Scene.cpp">
+      <Filter>src\Debut\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debut\Scene\SceneCamera.cpp">
+      <Filter>src\Debut\Scene</Filter>
+    </ClCompile>
     <ClCompile Include="src\Debut\dbtpch.cpp">
       <Filter>src\Debut</Filter>
     </ClCompile>
@@ -257,8 +281,5 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debut\Scene\Scene.cpp" />
-    <ClCompile Include="src\Debut\Scene\Entity.cpp" />
-    <ClCompile Include="src\Debut\Scene\SceneCamera.cpp" />
   </ItemGroup>
 </Project>
