Improved file menu

--- a/Debut/Debut.vcxproj
+++ b/Debut/Debut.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="src\Debut\Scene\SceneSerializer.h" />
     <ClInclude Include="src\Debut\Scene\ScriptableEntity.h" />
     <ClInclude Include="src\Debut\dbtpch.h" />
+    <ClInclude Include="src\Debut\Utils\PlatformUtils.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLError.h" />
@@ -224,6 +225,7 @@
     <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsPlatformUtils.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
