--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -7,7 +7,7 @@ Collapsed=0
 Pos=1570,24
 Size=350,967
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -15,29 +15,29 @@ Size=1920,991
 Collapsed=0
 
 [Window][Scene view]
-Pos=366,24
-Size=1202,967
+Pos=352,24
+Size=1216,967
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Scene Hierarchy]
 Pos=0,509
-Size=364,482
+Size=350,482
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Properties]
 Pos=0,24
-Size=364,483
+Size=350,483
 Collapsed=0
 DockId=0x00000005,0
 
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,53 Size=1920,967 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1568,701 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=364,701 Split=Y Selected=0xC89E3217
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1568,967 Split=X
+    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=350,701 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=371,486 Selected=0xC89E3217
       DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=371,484 Selected=0x9A68760C
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1202,701 CentralNode=1 Selected=0xD184B444
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=350,701 HiddenTabBar=1 Selected=0x1C33C293
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1216,701 CentralNode=1 Selected=0xD184B444
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=350,967 Selected=0x1C33C293
 
