--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Debut/vendor/imguizmo"]
 	path = Debut/vendor/imguizmo
 	url = https://github.com/thecherno/imguizmo
+[submodule "Debut/vendor/glm"]
+	path = Debut/vendor/glm
+	url = https://github.com/g-truc/glm
