--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,6 @@
 [submodule "Debut/vendor/rttr"]
 	path = Debut/vendor/rttr
 	url = https://github.com/rttrorg/rttr
-[submodule "Debut/vendor/imguizmo"]
-	path = Debut/vendor/imguizmo
-	url = https://github.com/thecherno/imguizmo
+[submodule "Debut/vendor/glm"]
+	path = Debut/vendor/glm
+	url = https://github.com/g-truc/glm
