--- a/Debut/Debut.vcxproj.filters
+++ b/Debut/Debut.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="src\Debut\ImGui">
       <UniqueIdentifier>{9AEC34EE-0678-A2B2-0F89-25A77B93FEB2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Debut\Math">
+      <UniqueIdentifier>{49AE4126-357C-352C-1E10-A6520A7D1191}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Debut\Renderer">
       <UniqueIdentifier>{16C5B573-02A9-76C9-6B09-711C570C614B}</UniqueIdentifier>
     </Filter>
@@ -43,8 +46,11 @@
     <Filter Include="vendor\glm\glm">
       <UniqueIdentifier>{D11AC9C9-BDE8-BCCF-A67C-2DF692E99834}</UniqueIdentifier>
     </Filter>
-    <Filter Include="vendor\glm\glm\core">
-      <UniqueIdentifier>{E9359AE0-5597-77EE-DE04-BEA04A65AEAD}</UniqueIdentifier>
+    <Filter Include="vendor\glm\glm\detail">
+      <UniqueIdentifier>{739DA071-DF09-5C6C-A8FD-F3C914297ED4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="vendor\glm\glm\simd">
+      <UniqueIdentifier>{CDE1A2E0-3943-80EE-C2B0-C6A02E11B7AD}</UniqueIdentifier>
     </Filter>
     <Filter Include="vendor\imguizmo">
       <UniqueIdentifier>{B36F5F1F-1FFB-CCE3-280C-50D8941629E4}</UniqueIdentifier>
@@ -110,6 +116,9 @@
     </ClInclude>
     <ClInclude Include="src\Debut\ImGui\ImGuiLayer.h">
       <Filter>src\Debut\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Debut\Math\Math.h">
+      <Filter>src\Debut\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\Debut\OrthographicCameraController.h">
       <Filter>src\Debut</Filter>
@@ -204,6 +213,36 @@
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>src\Platform\Windows</Filter>
     </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\common.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\exponential.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\geometric.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\integer.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\matrix.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\neon.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\packing.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\platform.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\trigonometric.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
+    <ClInclude Include="vendor\glm\glm\simd\vector_relational.h">
+      <Filter>vendor\glm\glm\simd</Filter>
+    </ClInclude>
     <ClInclude Include="vendor\imguizmo\ImCurveEdit.h">
       <Filter>vendor\imguizmo</Filter>
     </ClInclude>
@@ -243,7 +282,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Debut\Math\Math.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Debut\Core\Application.cpp">
@@ -263,6 +301,9 @@
     </ClCompile>
     <ClCompile Include="src\Debut\ImGui\ImGuiLayer.cpp">
       <Filter>src\Debut\ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Debut\Math\Math.cpp">
+      <Filter>src\Debut\Math</Filter>
     </ClCompile>
     <ClCompile Include="src\Debut\OrthographicCameraController.cpp">
       <Filter>src\Debut</Filter>
@@ -345,8 +386,8 @@
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
-    <ClCompile Include="vendor\glm\glm\core\dummy.cpp">
-      <Filter>vendor\glm\glm\core</Filter>
+    <ClCompile Include="vendor\glm\glm\detail\glm.cpp">
+      <Filter>vendor\glm\glm\detail</Filter>
     </ClCompile>
     <ClCompile Include="vendor\imguizmo\ImCurveEdit.cpp">
       <Filter>vendor\imguizmo</Filter>
@@ -375,6 +416,5 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Debut\Math\Math.cpp" />
   </ItemGroup>
 </Project>
