--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -32,12 +32,18 @@ Size=350,483
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][##]
+Pos=352,24
+Size=1216,967
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,53 Size=1920,967 Split=X
   DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1568,967 Split=X
     DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=350,701 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=371,486 Selected=0xC89E3217
       DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=371,484 Selected=0x9A68760C
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1216,701 CentralNode=1 Selected=0xD184B444
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1216,701 CentralNode=1 Selected=0x5D1714EC
   DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=350,967 Selected=0x1C33C293
 
