--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -4,14 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=1570,24
-Size=350,967
+Pos=930,24
+Size=350,696
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,991
+Size=1280,720
 Collapsed=0
 
 [Window][Scene view]
@@ -21,14 +21,14 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Scene Hierarchy]
-Pos=0,509
-Size=350,482
+Pos=0,374
+Size=350,346
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Properties]
 Pos=0,24
-Size=350,483
+Size=350,348
 Collapsed=0
 DockId=0x00000005,0
 
@@ -38,12 +38,24 @@ Size=1216,967
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Viewport]
+Pos=352,24
+Size=576,696
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][yo]
+Pos=352,24
+Size=1216,967
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,53 Size=1920,967 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=41,94 Size=1280,696 Split=X
   DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1568,967 Split=X
     DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=350,701 Split=Y Selected=0xC89E3217
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=371,486 Selected=0xC89E3217
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=371,484 Selected=0x9A68760C
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=1216,701 CentralNode=1 Selected=0x5D1714EC
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=350,967 Selected=0x1C33C293
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=371,486 Selected=0x199AB496
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=371,484 Selected=0x2E9237F7
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=576,701 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=350,967 Selected=0x54723243
 
