Started mouse picking

--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -7,7 +7,7 @@ Collapsed=0
 Pos=930,24
 Size=350,696
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000006,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -18,44 +18,48 @@ Collapsed=0
 Pos=352,24
 Size=1216,967
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
-Pos=0,374
-Size=350,346
+Pos=0,375
+Size=349,345
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000003,0
 
 [Window][Properties]
 Pos=0,24
-Size=350,348
+Size=349,349
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000002,0
 
 [Window][##]
 Pos=352,24
 Size=1216,967
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=352,24
-Size=576,696
+Pos=351,24
+Size=577,696
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
 
 [Window][yo]
 Pos=352,24
 Size=1216,967
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
+
+[Window][DockSpace]
+Size=1920,991
+Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=41,94 Size=1280,696 Split=X
-  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=1568,967 Split=X
-    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=350,701 Split=Y Selected=0xC89E3217
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=371,486 Selected=0x199AB496
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=371,484 Selected=0x2E9237F7
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=576,701 CentralNode=1 Selected=0x13926F0B
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=350,967 Selected=0x54723243
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=73,126 Size=1280,696 Split=X
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=928,696 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=349,696 Split=Y Selected=0x199AB496
+      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=349,485 Selected=0x199AB496
+      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=349,480 Selected=0x2E9237F7
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=577,696 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=350,696 Selected=0x54723243
 
