--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=930,24
-Size=350,696
+Pos=930,371
+Size=350,349
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -21,14 +21,14 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene Hierarchy]
-Pos=0,375
-Size=349,345
+Pos=0,402
+Size=418,318
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000008,0
 
 [Window][Properties]
-Pos=0,24
-Size=349,349
+Pos=930,24
+Size=350,345
 Collapsed=0
 DockId=0x00000002,0
 
@@ -39,8 +39,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=351,24
-Size=577,696
+Pos=420,24
+Size=508,696
 Collapsed=0
 DockId=0x00000004,0
 
@@ -54,12 +54,20 @@ DockId=0x00000004,0
 Size=1920,991
 Collapsed=0
 
+[Window][Content browser]
+Pos=0,24
+Size=418,376
+Collapsed=0
+DockId=0x00000007,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=486,209 Size=1280,696 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=105,158 Size=1280,696 Split=X
   DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=928,696 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=349,696 Split=Y Selected=0x199AB496
-      DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=349,485 Selected=0x199AB496
-      DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=349,480 Selected=0x2E9237F7
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=577,696 CentralNode=1 Selected=0x13926F0B
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=350,696 Selected=0x54723243
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=418,696 Split=Y Selected=0x2E9237F7
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=349,376 Selected=0x3995E0EF
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=349,318 Selected=0x2E9237F7
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=508,696 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=350,696 Split=Y Selected=0x54723243
+    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=350,345 Selected=0x199AB496
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=350,349 Selected=0x54723243
 
