--- a/Debutant/imgui.ini
+++ b/Debutant/imgui.ini
@@ -1,73 +1,59 @@
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1920,991
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Settings]
-Pos=930,371
-Size=350,349
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][DockSpace Demo]
-Pos=0,0
-Size=1280,720
-Collapsed=0
-
-[Window][Scene view]
-Pos=352,24
-Size=1216,967
-Collapsed=0
-DockId=0x00000004,0
-
 [Window][Scene Hierarchy]
-Pos=0,402
-Size=350,318
+Pos=0,510
+Size=319,481
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000006,0
 
 [Window][Properties]
-Pos=930,24
-Size=350,345
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][##]
-Pos=352,24
-Size=1216,967
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][Viewport]
-Pos=352,24
-Size=576,696
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][yo]
-Pos=352,24
-Size=1216,967
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][DockSpace]
-Size=1920,991
-Collapsed=0
-
-[Window][Content browser]
-Pos=0,24
-Size=350,376
+Pos=1570,24
+Size=350,704
 Collapsed=0
 DockId=0x00000007,0
 
+[Window][Content browser]
+Pos=0,24
+Size=319,484
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Settings]
+Pos=1570,730
+Size=350,261
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Viewport]
+Pos=321,58
+Size=1247,933
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][##toolbar]
+Pos=321,24
+Size=1247,32
+Collapsed=0
+DockId=0x00000009,0
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=233,286 Size=1280,696 Split=X
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=928,696 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=350,696 Split=Y Selected=0x2E9237F7
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=349,376 Selected=0x3995E0EF
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=349,318 Selected=0x2E9237F7
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1216,696 CentralNode=1 Selected=0x13926F0B
-  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=350,696 Split=Y Selected=0x54723243
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=350,345 Selected=0x199AB496
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=350,349 Selected=0x54723243
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,53 Size=1920,967 Split=X
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=928,696 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=319,696 Split=Y Selected=0x3995E0EF
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=319,348 Selected=0x3995E0EF
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=319,346 Selected=0x2E9237F7
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1247,696 Split=Y
+      DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=607,32 HiddenTabBar=1 Selected=0xF0F70764
+      DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=607,933 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=350,696 Split=Y Selected=0x54723243
+    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=350,506 Selected=0x199AB496
+    DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=350,188 Selected=0x54723243
 
